--- a/src/components/Tile.css
+++ b/src/components/Tile.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Oswald&display=swap');
+
+/* font-family: 'Oswald', sans-serif;
+font-family: 'Bebas Neue', cursive; */
+
 html {
   font-size: 62.5%;
 }
@@ -30,6 +35,7 @@ html {
 
 
 h2 {
+  font-family: 'Bebas Neue', cursive;
   font-size: 5rem;
   background: -webkit-linear-gradient(80deg, white, #c168c4, #94bb2f, #381665, #11064f);
   -webkit-background-clip: text;
@@ -38,6 +44,7 @@ h2 {
 }
 
 p {
+  font-family: 'Oswald', sans-serif;
   color: #eee;
 }
 
