--- a/src/components/Tile.css
+++ b/src/components/Tile.css
@@ -7,32 +7,9 @@ html {
   font-size: 62.5%;
 }
 
-.tile-container {
-  width: 80%;
-  display: block;
-  margin: 10% auto;
-  padding: 2rem;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  background-image: linear-gradient(to bottom, #171717, #000000);
-  border-radius: 10px;
-}
-
-.img {
-  width: 300px;
-  overflow: hidden;
-  display: flex;
-  background-size: contain;
-  border-radius: 5px;
-  border: solid 1px black;
-}
-.img img {
+img {
   width: 100%;
 }
-
 
 h2 {
   font-family: 'Bebas Neue', cursive;
@@ -46,11 +23,5 @@ h2 {
 p {
   font-family: 'Oswald', sans-serif;
   color: #eee;
-}
-
-.exp {
-  text-align: justify;
-}
-.exp p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
